crates/pg_syntax/tests/snapshots/postgres_regress/json@180.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '\"foo\"'::json #> array['z'];"
---
SelectStmt@0..35
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..33
    AExpr@7..33
      TypeCast@7..20
        AConst@7..14
          Sconst@7..14 "'\"foo\"'"
        Typecast@14..16 "::"
        TypeName@16..20
          Ident@16..20 "json"
      Whitespace@20..21 " "
      Op@21..23 "#>"
      Whitespace@23..24 " "
      AArrayExpr@24..33
        Array@24..29 "array"
        Ascii91@29..30 "["
        AConst@30..33
          Sconst@30..33 "'z'"
  Ascii93@33..34 "]"
  Ascii59@34..35 ";"

