crates/pg_syntax/tests/snapshots/postgres_regress/json@181.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '42'::json #> array['f2'];"
---
SelectStmt@0..33
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..31
    AExpr@7..31
      TypeCast@7..17
        AConst@7..11
          Sconst@7..11 "'42'"
        Typecast@11..13 "::"
        TypeName@13..17
          Ident@13..17 "json"
      Whitespace@17..18 " "
      Op@18..20 "#>"
      Whitespace@20..21 " "
      AArrayExpr@21..31
        Array@21..26 "array"
        Ascii91@26..27 "["
        AConst@27..31
          Sconst@27..31 "'f2'"
  Ascii93@31..32 "]"
  Ascii59@32..33 ";"

