crates/pg_syntax/tests/snapshots/postgres_regress/json@184.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '[1,2,3]'::json #>> '{}';"
---
SelectStmt@0..32
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..31
    AExpr@7..31
      TypeCast@7..22
        AConst@7..16
          Sconst@7..16 "'[1,2,3]'"
        Typecast@16..18 "::"
        TypeName@18..22
          Ident@18..22 "json"
      Whitespace@22..23 " "
      Op@23..26 "#>>"
      Whitespace@26..27 " "
      AConst@27..31
        Sconst@27..31 "'{}'"
  Ascii59@31..32 ";"

